--- a/app/src/main/res/layout/loan_preview.xml
+++ b/app/src/main/res/layout/loan_preview.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F1F5F8">
+    android:background="#F8F9F9">
 
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:background="@drawable/ic_medium_bg"
+        android:background="@drawable/rectangular_curved_bottom_bg_dark_blue"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <androidx.appcompat.widget.Toolbar
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/appbar"
-        android:layout_marginTop="-70dp"
+        android:layout_marginTop="-80dp"
         android:elevation="5dp">
     <LinearLayout
         android:layout_width="match_parent"
