--- a/app/src/main/res/layout/new_business_account_dialog.xml
+++ b/app/src/main/res/layout/new_business_account_dialog.xml
@@ -111,6 +111,7 @@
 
 
             <TextView
+                android:id="@+id/agent_merchant"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
