--- a/app/src/main/res/layout/new_fragment_wallet_account.xml
+++ b/app/src/main/res/layout/new_fragment_wallet_account.xml
@@ -170,7 +170,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
-                android:id="@+id/card_view_employment_business_info"
+                android:id="@+id/card_view_qr_code"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="25dp"
@@ -178,6 +178,58 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_below="@id/card_view_personal_info"
+                app:cardCornerRadius="5dp">
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="14dp">
+
+
+                        <TextView
+                            android:id="@+id/qr_code_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:text="Merchant QR code "
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:alpha="0.8"/>
+                        <TextView
+                            android:id="@+id/qr_code_sub_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentStart="true"
+                            android:layout_below="@id/qr_code_title"
+                            android:text="Click to view code"
+                            android:textSize="10sp"
+                            android:textColor="#8C98A9"
+                            android:textStyle="bold"
+                            android:alpha="0.81"/>
+                        <ImageView
+                            android:id="@+id/img_qr_code"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:src="@drawable/ic_right_arrow_green"/>
+
+                    </RelativeLayout>
+
+                </RelativeLayout>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_view_employment_business_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="25dp"
+                android:background="@color/white"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@id/card_view_qr_code"
                 app:cardCornerRadius="5dp">
                 <RelativeLayout
                     android:layout_width="match_parent"
