--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -15,21 +15,20 @@
         android:id="@+id/walletCouponsFragment"
         android:enabled="true"
         android:icon="@drawable/ic_bn_gift"
-        android:title="COUPONS"
+        android:title="REWARDS"
         app:showAsAction="ifRoom" />
-
+    <item
+        android:id="@+id/walletScanFragment"
+        android:enabled="true"
+        android:title=" "
+        app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/WalletBuyFragment"
         android:enabled="true"
         android:icon="@drawable/ic_bn_store"
-        android:title="BUY &amp; SELL"
+        android:title="SHOP"
         app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/walletCardsFragment"
-        android:enabled="true"
-        android:icon="@drawable/ic_group_9762"
-        android:title="CARDS"
-        app:showAsAction="ifRoom"/>
+
 
     <item
         android:id="@+id/walletAccountFragment"
