--- a/app/src/main/res/layout/fragment_shop_orders.xml
+++ b/app/src/main/res/layout/fragment_shop_orders.xml
@@ -1,90 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/windowBackground">
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appbar"
+<layout>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar_orders"
-            android:layout_width="match_parent"
-            android:layout_height="?actionBarSize"
-            app:popupTheme="@style/AppTheme.PopupOverlay"/>
-
-    </com.google.android.material.appbar.AppBarLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="?actionBarSize"
-        android:orientation="vertical"
-        android:layout_below="@id/appbar">
-
-        <EditText
-            android:id="@+id/etxt_search_order"
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@color/windowBackground">
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/round_border"
-            android:drawableEnd="@drawable/ic_search"
-            android:ems="10"
-            android:fontFamily="@font/josefin_sans"
-            android:hint="@string/search_here"
-            android:inputType="textPersonName"
-            android:padding="10dp" />
+            android:background="@color/colorPrimary"
+            android:theme="@style/AppTheme.AppBarOverlay">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler"
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar_orders"
+                android:layout_width="match_parent"
+                android:layout_height="?actionBarSize"
+                app:popupTheme="@style/AppTheme.PopupOverlay"/>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
-            android:background="?android:attr/selectableItemBackground">
+            android:layout_marginBottom="?actionBarSize"
+            android:orientation="vertical"
+            android:layout_below="@id/appbar">
 
-        </androidx.recyclerview.widget.RecyclerView>
-
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
+            <EditText
+                android:id="@+id/etxt_search_order"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:layout_margin="10dp"
+                android:background="@drawable/round_border"
+                android:drawableEnd="@drawable/ic_search"
+                android:ems="10"
+                android:fontFamily="@font/josefin_sans"
+                android:hint="@string/search_here"
+                android:inputType="textPersonName"
+                android:padding="10dp" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/orders_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="?android:attr/selectableItemBackground">
+
+            </androidx.recyclerview.widget.RecyclerView>
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
+                    android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/image_no_product"
-                        android:layout_width="300dp"
-                        android:layout_height="200dp"
-                        android:layout_marginTop="50dp" />
-
-                    <TextView
-                        android:id="@+id/txt_no_products"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/josefin_sans"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:gravity="center"
-                        android:text="Receive and track order from here"
-                        android:textColor="#31244A"
-                        android:textSize="24sp"
-                        android:textStyle="bold"/>
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/image_no_product"
+                            android:layout_width="300dp"
+                            android:layout_height="200dp"
+                            android:layout_marginTop="50dp" />
+
+                        <TextView
+                            android:id="@+id/txt_no_products"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/josefin_sans"
+                            android:gravity="center"
+                            android:text="Receive and track order from here"
+                            android:textColor="#31244A"
+                            android:textSize="24sp"
+                            android:textStyle="bold"/>
+                    </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
-        </ScrollView>
+            </ScrollView>
 
-    </LinearLayout>
+        </LinearLayout>
 
 
-</RelativeLayout>
+    </RelativeLayout>
+</layout>
