UI changes in get started , login and sign up

--- a/app/src/main/res/layout/signup_fragment.xml
+++ b/app/src/main/res/layout/signup_fragment.xml
@@ -433,14 +433,15 @@
                             <androidx.appcompat.widget.AppCompatButton
                                 android:id="@+id/signUpBtn"
                                 android:layout_width="match_parent"
-                                android:layout_height="45dp"
+                                android:layout_height="50dp"
                                 android:layout_gravity="center_vertical"
                                 android:layout_weight="1"
                                 android:background="@color/transparent"
                                 android:text="@string/btn_continue"
                                 android:textAllCaps="true"
                                 android:textColor="@color/white"
-                                android:textSize="12sp"/>
+                                android:textSize="14sp"
+                                android:textStyle="bold"/>
 
                             <ImageView
                                 android:layout_width="30dip"
@@ -680,34 +681,76 @@
 
 
 
-                            <Button
-                                android:id="@+id/btn_back"
+                            <FrameLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
+                                android:layout_height="50dp"
                                 android:layout_margin="15dp"
-                                android:layout_weight="1"
-                                android:paddingStart="10dp"
                                 android:background="@drawable/rectangular_blue_solid"
-                                android:text="Back"
-                                android:textStyle="bold"
-                                android:textColor="@color/white"
-                                android:textSize="16sp"
-                                android:drawableStart="@drawable/ic_chevron_left"
-                                android:drawableTint="@color/white"/>
-                            <Button
-                                android:id="@+id/btn_submit_security_qn"
+                                android:layout_weight="1">
+
+                                <Button
+                                    android:id="@+id/btn_back"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center_vertical"
+                                    android:background="@color/transparent"
+                                    android:text="Back"
+                                    android:textStyle="bold"
+                                    android:textAllCaps="true"
+                                    android:textColor="@color/white"
+                                    android:textSize="14sp" />
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="start|center_vertical"
+                                    android:layout_marginStart="15dp"
+                                    android:src="@drawable/ic_right_chevron_arrow_white"
+                                    android:rotation="180">
+
+                                </ImageView>
+
+                            </FrameLayout>
+
+                            <FrameLayout
                                 android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
+                                android:layout_height="50dp"
                                 android:layout_margin="15dp"
-                                android:paddingEnd="10dp"
                                 android:background="@drawable/rectangular_blue_solid"
-                                android:text="@string/submit"
-                                android:textStyle="bold"
-                                android:textColor="@color/white"
-                                android:textSize="16sp"
-                                android:drawableEnd="@drawable/ic_right_chevron_arrow_white"/>
+                                android:layout_weight="1">
+
+                                <Button
+                                    android:id="@+id/btn_submit_security_qn"
+                                    style="@style/Button_DW"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:layout_gravity="center_vertical"
+                                    android:background="@color/transparent"
+                                    android:text="@string/submit"
+                                    android:textStyle="bold"
+                                    android:textAllCaps="true"
+                                    android:textColor="@color/white"
+                                    android:textSize="14sp" />
+
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="end|center_vertical"
+                                    android:layout_marginEnd="15dp"
+                                    android:src="@drawable/ic_right_chevron_arrow_white">
+
+                                </ImageView>
+
+                            </FrameLayout>
+
                         </LinearLayout>
+
+
+
+
+
+
+
                     </LinearLayout>
 
 
