--- a/app/src/main/res/layout/fragment_get_started_sign_up.xml
+++ b/app/src/main/res/layout/fragment_get_started_sign_up.xml
@@ -81,12 +81,16 @@
                     android:textColor="@color/colorPrimary"
                     android:alpha=".5"/>
 
-                <LinearLayout
+
+
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/rounded_gray_background"
                     android:orientation="horizontal">
+
+
 
                     <TextView
                         android:id="@+id/text_country_code"
@@ -96,17 +100,25 @@
                         android:gravity="center"
                         android:text="+256"
                         android:textColor="#303030"
-                        android:textSize="12sp"
+                        android:autoSizeMaxTextSize="12sp"
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="6dp"
                         app:drawableEndCompat="@drawable/ic_chevron_down"
-                        app:drawableStartCompat="@drawable/ic_ug_flag" />
+                        app:drawableStartCompat="@drawable/ic_ug_flag"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="@id/user_mobile"
+                        app:layout_constraintEnd_toStartOf="@id/guideline1"/>
 
                     <View
+                        android:id="@+id/view"
                         android:layout_width="1dp"
                         android:layout_height="match_parent"
                         android:background="#FFF"
-                        android:alpha=".7"/>
+                        android:alpha=".7"
+                        app:layout_constraintStart_toEndOf="@id/guideline1"
+                        app:layout_constraintEnd_toStartOf="@id/user_mobile"
+                        app:layout_constraintBottom_toBottomOf="@id/user_mobile"/>
 
                     <EditText
                         android:id="@+id/user_mobile"
@@ -118,9 +130,21 @@
                         android:maxLength="9"
                         android:padding="5dp"
                         android:textSize="12sp"
-                        android:hint="Enter your mobile number"/>
+                        android:hint="Enter your mobile number"
+                        android:layout_marginStart="10dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/view"
+                        app:layout_constraintEnd_toEndOf="parent"/>
 
-                </LinearLayout>
+
+                    <androidx.constraintlayout.widget.Guideline
+                        android:id="@+id/guideline1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        app:layout_constraintGuide_percent="0.34" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
