--- a/app/src/main/res/layout/fragment_online_order_details.xml
+++ b/app/src/main/res/layout/fragment_online_order_details.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -228,7 +229,7 @@
                         android:textColor="#31244A"/>
 
                     <TextView
-                        android:id="@+id/txt_online_total_price"
+                        android:id="@+id/txt_sub_total_price"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="8"
@@ -358,3 +359,4 @@
 
     </androidx.core.widget.NestedScrollView>
 </RelativeLayout>
+</layout>
